[package]
name = "lw-webdriver"
version = "0.4.1"
authors = ["Mubelotix <mubelotix@gmail.com>"]
edition = "2018"
description = "A lightweight webdriver client."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Mubelotix/webdriver"
maintenance = { status = "actively-developed" }

[dependencies]
minreq = { version="2.0.3" }
serde_json = "1.0"
serde = {version="1.0", features=["derive"]}
log = "0.4.8"
env_logger = "0.7.1"